--- a/style.css
+++ b/style.css
@@ -301,6 +301,15 @@ margin-top: 100px !important;
 }
 
 
+.mrg-top-push-2{
+
+    margin-top: 180px !important;
+    
+    }
+    
+
+
+
 .btn-marcson:hover{
 
  background-color:#252525;
@@ -483,6 +492,18 @@ border-bottom: 2px solid #636363 !important;
 
 @media only screen and (min-width: 320px) and (max-width: 480px) {
 
+
+    p-5{
+        text-align:center;
+        font-family:CerebriSans-Lightimport;
+        color:white;
+        font-weight: 400;
+        font-style: normal;
+        font-size: 16px;
+        line-height: 26px;
+    }
+    
+
     .btn-marcson-call{
 
         background-color: #252525;
@@ -495,6 +516,20 @@ border-bottom: 2px solid #636363 !important;
     
     }
     
+
+
+    .freq{
+
+        font-family:CerebriSans-Boldimport !important;
+        color: white;
+        text-align: center;
+        font-weight: bolder;
+        font-size: 30px;   
+        margin-top: 80px;
+        font-style: normal;
+    
+    }
+
 
 
 
@@ -527,7 +562,7 @@ border-bottom: 2px solid #636363 !important;
         .h3-top{
 
             font-family:CerebriSans-Boldimport;
-            color:#68E79D;
+            color:#2B643B;
             font-weight: 700;
             font-style: normal;
             line-height: 50px;
@@ -574,6 +609,21 @@ border-bottom: 2px solid #636363 !important;
     flex-direction: column-reverse;
 
  }
+
+
+ .h3-top-3{
+
+    font-family:CerebriSans-Boldimport;
+    color:#2B643B;
+    font-weight: 700;
+    font-style: normal;
+    line-height: 70px;
+    font-size: 32px;
+    margin-top: -130px !important;
+    text-align: center;
+
+
+}
 
 
 
