added new images page

--- a/style.css
+++ b/style.css
@@ -845,3 +845,62 @@ width: 200px;
 
 
 }
+
+.story1{
+
+text-align: center;
+font-family:CerebriSans-Boldimport !important;
+font-size: 60px;
+font-weight: 700;
+color: #2B643B;
+line-height: 70px;
+margin-top: 100px;
+margin-bottom: 15px;
+}
+
+.story2{
+    text-align: center;
+    font-family:CerebriSans-Lightimport !important;
+
+}
+
+
+.row {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0 4px;
+  }
+  
+  /* Create four equal columns that sits next to each other */
+  .column {
+    flex: 25%;
+    max-width: 25%;
+    padding: 0 4px;
+  }
+  
+  .column img {
+    margin-top: 8px;
+    vertical-align: middle;
+    width: 100%;
+  }
+  
+  /* Responsive layout - makes a two column-layout instead of four columns */
+  @media screen and (max-width: 800px) {
+    .column {
+      flex: 50%;
+      max-width: 50%;
+    }
+  }
+  
+  /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+  @media screen and (max-width: 600px) {
+    .column {
+      flex: 100%;
+      max-width: 100%;
+    }
+  }
+
+  .marg-top-bottom{
+      margin-top: 100px;
+      margin-bottom: 150px;
+  }
